K8s/Web/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-web-deployment
  namespace: web-dmz
spec:
  selector:
    matchLabels:
      app: sample-web
  replicas: 1
  template:
    metadata:
      labels:
        app: sample-web
    spec:
      containers:
      - name: sample-web
        image: 202256309025.dkr.ecr.ap-southeast-1.amazonaws.com/sample-web:IMAGETAG
        ports:
        - containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 20
        startupProbe:
          tcpSocket:
            port: 80
          failureThreshold: 15
          periodSeconds: 10
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"
      imagePullSecrets: 
      - name: ecr-login-token
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key:  eks.amazonaws.com/nodegroup
                operator: In
                values:
                - PROJECT-01-PROD-EKS-1-NG-PUBLIC
      dnsPolicy: ClusterFirst
