K8s/Web/web-service.yml
kind: Service 
apiVersion: v1 
metadata: 
  name:  sample-web-service
  namespace: web-dmz
spec: 
  selector: 
    app: sample-web
  ports: 
  - protocol: TCP 
    port: 80
    targetPort: 80
  type: ClusterIP
