K8s/Web/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-web-ingress
  namespace: web-dmz
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /sample-web/$2
spec:
  rules:
  - host: a84a86a638ae84d418aa233b8a7db513-79afbeec7618ad47.elb.ap-southeast-1.amazonaws.com
    http:
      paths:
      - path: /sample-web(/|$)(.*)
        backend:
          serviceName: sample-web-service
          servicePort: 80
